--- a/Ejercicio_GIT/Ejercicio_GIT.csproj
+++ b/Ejercicio_GIT/Ejercicio_GIT.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Compras.cs" />
     <Compile Include="Empresa.cs" />
+    <Compile Include="Producto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resultado.cs" />
